# DTree

./: README.md  pyproject.toml
app/: dashboard.py
dtree/: base.py  node.py  tree.py  utils.py
examples/: decision_tree  plottree_medium.py
tests/: basic_test.py
